oxiplate-derive/tests/broken/writ/writ-unclosed-tag.stderr
error: End of file encountered while parsing a writ. Expected `}}`, `-}}`, or `_}}`
 --> tests/broken/writ/writ-unclosed-tag.rs:4:25
  |
4 | #[oxiplate_inline("{{ foo")]
  |                         ^
